# ConflictingDependencies

./: .gitignore  CMakeLists.txt  README.md  main.cpp
sdk_a/: CMakeLists.txt  sdk_a.cpp  sdk_a.h  wrapper_a.cpp  wrapper_a.h
sdk_a/ssl_a/: CMakeLists.txt  ssl.c
sdk_b/: CMakeLists.txt  sdk_b.cpp  sdk_b.h  wrapper_b.cpp  wrapper_b.h
sdk_b/ssl_b/: CMakeLists.txt  ssl.c  ssl.h
